style: Fix weird z-indexing of ephemeral elements
This was causing `.ephemeral`s to jump on top of other things when
hovered, which looks weird when they're partially occluded by another
element (e.g. the toolbar at the top of the page).

--- a/styles/index.less
+++ b/styles/index.less
@@ -115,13 +115,11 @@ html.metrics-compact {
   margin: calc(0px - var(--input-text-ph)) calc(0px - var(--input-text-pw));
 
   &:hover {
-    z-index: 50;
     box-shadow: var(--ephemeral-hover-shadow-metrics)
       var(--ephemeral-hover-shadow-clr);
   }
   &:focus,
   &:focus-within {
-    z-index: 50;
     background-color: var(--ctrl-bg);
     box-shadow: var(--focus-shadow);
   }
